--- a/6-Change-Tracker/ChangeTracker/ChangeTracker/ChangeTracker.csproj
+++ b/6-Change-Tracker/ChangeTracker/ChangeTracker/ChangeTracker.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
